--- a/urlshortening/requirements.txt
+++ b/urlshortening/requirements.txt
@@ -1,2 +1,13 @@
-Django==4.2.9
+asgiref==3.8.1
+black==24.4.2
+click==8.1.7
+Django==5.0.6
 django-ratelimit==4.1.0
+mypy-extensions==1.0.0
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.2
+ruff==0.4.4
+sqlparse==0.5.0
+tomli==2.0.1
+typing_extensions==4.11.0
